Initial extraction of addon

--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -17,6 +17,8 @@
   <body>
     {{content-for 'body'}}
 
+    <div data-component='my-component' data-attr='{"title": "Component Title"}'></div>
+
     <script src="assets/vendor.js"></script>
     <script src="assets/dummy.js"></script>
 
