Add a nested component

--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -17,7 +17,13 @@
   <body>
     {{content-for 'body'}}
 
+    <p>Some static content in the index page</p>
+     <hr>
+
     <div data-component='my-component' data-attr='{"title": "Component Title"}'></div>
+
+     <hr>
+    <p>Some more static content in the index page</p>
 
     <script src="assets/vendor.js"></script>
     <script src="assets/dummy.js"></script>
