Align dummy app component with testing component

--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -18,11 +18,11 @@
     {{content-for 'body'}}
 
     <p>Some static content in the index page</p>
-     <hr>
+    <hr>
 
-    <div data-component='my-component' data-attr='{"title": "Component Title"}'></div>
+    <div data-component='top-level-component' data-attr='{"title": "Component Title"}'></div>
 
-     <hr>
+    <hr>
     <p>Some more static content in the index page</p>
 
     <script src="assets/vendor.js"></script>
