Add innerContent feature

--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -22,6 +22,10 @@
 
     <div data-component='top-level-component' data-attr='{"title": "Component Title"}'></div>
 
+    <div id='component-with-inner-content' data-component='component-with-inner-content'>
+      <div id='inner-content'></div>
+    </div>
+
     <hr>
     <p>Some more static content in the index page</p>
 
