Fix markup for dummy app

--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -20,9 +20,9 @@
     <p>Some static content in the index page</p>
     <hr>
 
-    <div data-component='top-level-component' data-attr='{"title": "Component Title"}'></div>
+    <div data-component='top-level-component' data-attrs='{"title": "Component Title"}'></div>
 
-    <div id='component-with-inner-content' data-component='component-with-inner-content'>
+    <div id='inner-content-component' data-component='inner-content-component'>
       <div id='inner-content'></div>
     </div>
 
