Introduces ember-outlet

--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -15,6 +15,7 @@
     {{content-for 'head-footer'}}
   </head>
   <body>
+    <div data-outlet="main"></div>
     {{content-for 'body'}}
 
     <p>Some static content in the index page</p>
